# PaperLibrary-cli

./: .gitignore  pyproject.toml
paperlibrary/: __init__.py  config.py  pap.py
paperlibrary/api/: __init__.py  api.py  models.py
