[tool.poetry]
name = "paperlibrary"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.24.0"
click = "^8.1.2"
tzlocal = "^5.0"
alive-progress = "^3.2.0"
PyYAML = "^6.0.0"
click-default-group = "^1.2.2"
pydantic = "^2.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pap = "paperlibrary.pap:cli"
